==> floripasat/ttc/beacon/drivers/radio/rf4463/rf4463.c <==
#include <libs/driverlib/driverlib.h>
#include <modules/time/delay.h>         // delay_ms()
#include "rf4463.h"
#include "rf4463_pinmap.h"
#include "rf4463_config.h"
#include "rf4463_spi.h"
#include "rf4463_registers.h"
#include "radio_config_Si4463.h"

uint8_t rf4463_init()
{
    rf4463_gpio_init();
    
    if (rf4463_spi_init() == STATUS_FAIL)
    {
        return STATUS_FAIL;
    }
    
    // Reset the RF4463
    rf4463_power_on_reset();
    
    // Registers configuration
    rf4463_reg_config();
    
    // Set max. TX power
    rf4463_set_tx_power(127);
    
    // Check if the RF4463 is working
    if (rf4463_check_device() == true)
    {
        return STATUS_SUCCESS;
    }
    else
    {
        return STATUS_FAIL;
    }
}

void rf4463_power_on_reset()
{
    uint8_t buffer[8] = {RF_POWER_UP};
    
    GPIO_setOutputHighOnPin(RF4463_SDN_PORT, RF4463_SDN_PIN);
    delay_ms(100);
    GPIO_setOutputLowOnPin(RF4463_SDN_PORT, RF4463_SDN_PIN);
    delay_ms(20);           // Wait for RF4463 stabilization
    
    // Send power-up command
    GPIO_setOutputLowOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    rf4463_spi_write(buffer, 7);
    GPIO_setOutputHighOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    
    delay_ms(200);
}

bool rf4463_tx_packet(uint8_t *send_buf, uint8_t send_len)
{
    rf4463_fifo_reset();        // Clear FIFO
    rf4463_write_tx_fifo(send_buf, send_len);
    rf4463_set_tx_interrupt();
    rf4463_clear_interrupts();
    rf4463_enter_tx_mode();
    
    uint16_t tx_timer = RF4463_TX_TIMEOUT;
    
    while(tx_timer--)
    {
        if (rf4463_wait_nIRQ())         // Wait packet sent interruption
        {
            return true;
        }
        
        delay_ms(1);
    }
    
    rf4463_init();
    
    return false;
}

uint8_t rf4463_rx_packet(uint8_t *rx_buf)
{
    uint8_t rx_len = rf4463_read_rx_fifo(rx_buf);   // Read data from the FIFO
    rf4463_fifo_reset();                            // Clear FIFO
    
    return rx_len;
}

bool rf4463_rx_init()
{
    uint8_t length = 50;
    
    rf4463_set_properties(RF4463_PROPERTY_PKT_FIELD_2_LENGTH_7_0, &length, 1);      // Reload RX FIFO size
    rf4463_fifo_reset();        // Clear FIFO
    rf4463_set_rx_interrupt();
    rf4463_clear_interrupts();
    rf4463_enter_rx_mode();
    
    return true;
}

bool rf4463_check_device()
{
    uint8_t buffer[10];
    uint16_t part_info;
    
    if (!rf4463_get_cmd(RF4463_CMD_PART_INFO, buffer, 9))
    {
        return false;
    }
    
    part_info = (buffer[2] << 8) | buffer[3];
    if (part_info != RF4463_PART_INFO)
    {
        return false;
    }
    else
    {
        return true;
    }
}

bool rf4463_check_cts()
{
    uint16_t timeout_counter = RF4463_CTS_TIMEOUT;
    
    while(timeout_counter--)
    {
        GPIO_setOutputLowOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
        
        rf4463_spi_transfer(RF4463_CMD_READ_BUF);
        
        if (rf4463_spi_transfer(RF4463_CMD_NOP) == RF4463_CTS_REPLY) // Read CTS
        {
            GPIO_setOutputHighOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
            
            return true;
        }
        
        GPIO_setOutputHighOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    }
    
    return	false;
}

bool rf4463_set_tx_power(uint8_t pwr)
{
    if (pwr > 127)      // Max. value is 127
    {
        return false;
    }
    
    uint8_t buffer[5];
    buffer[0] = 0x08;
    buffer[1] = pwr;
    buffer[2] = 0x00;
    buffer[3] = 0x3D;
    
    return rf4463_set_properties(RF4463_PROPERTY_PA_MODE, buffer, 4);
}

bool rf4463_set_properties(uint16_t start_property, uint8_t *para_buf, uint8_t length)
{
    if (!rf4463_check_cts())
    {
        return false;
    }
    
    uint8_t buffer[5];
    buffer[0] = RF4463_CMD_SET_PROPERTY;    // CMD
    buffer[1] = start_property >> 8;        // GROUP
    buffer[2] = length;                     // NUM_PROPS
    buffer[3] = start_property & 0xFF;      // START_PROP
    
    GPIO_setOutputLowOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    rf4463_spi_write(buffer, 4);            // Set start property and read length
    rf4463_spi_write(para_buf, length);     // Set parameters
    GPIO_setOutputHighOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    
    return true;
}

bool rf4463_get_properties(uint16_t start_property, uint8_t length, uint8_t *para_buf)
{
    if (!rf4463_check_cts())
    {
        return false;
    }
    
    uint8_t buffer[5];
    buffer[0] = RF4463_CMD_GET_PROPERTY;
    buffer[1] = start_property >> 8;    // GROUP
    buffer[2] = length;                 // NUM_PROPS
    buffer[3] = start_property & 0xFF;  // START_PROP
    
    GPIO_setOutputLowOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    rf4463_spi_write(buffer, 4);        // Set start property and read length
    GPIO_setOutputHighOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    
    if (!rf4463_check_cts())
    {
        return false;
    }
    
    GPIO_setOutputLowOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    rf4463_spi_transfer(RF4463_CMD_READ_BUF);   // Turn to read command mode
    rf4463_spi_write(para_buf, length);         // Read parameters
    GPIO_setOutputHighOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    
    return true;
}

void rf4463_set_config(const uint8_t *parameters, uint16_t para_len)
{
    // Command buffer starts with the length of the command in RADIO_CONFIGURATION_DATA_ARRAY
    uint8_t cmd_len;
    uint16_t cmd;
    uint16_t pos;
    uint8_t buffer[30];
    
    para_len--;
    cmd_len = parameters[0];
    pos = cmd_len + 1;
    
    while(pos < para_len)
    {
        cmd_len = parameters[pos++] - 1;            // Get command len
        cmd = parameters[pos++];                    // Get command
        memcpy(buffer, parameters + pos, cmd_len);  // Get parameters
        
        rf4463_set_cmd(cmd, buffer, cmd_len);
        pos += cmd_len;
    }
}

bool rf4463_set_preamble_len(uint8_t len)
{
    return rf4463_set_properties(RF4463_PROPERTY_PREAMBLE_TX_LENGTH, &len, 1);
}

bool rf4463_set_gpio_mode(uint8_t gpio0_mode, uint8_t gpio1_mode)
{
    uint8_t buffer[7];
    buffer[0] = gpio0_mode;
    buffer[1] = gpio1_mode;
    buffer[2] = 0x00;
    buffer[3] = 0x00;
    buffer[4] = 0x00;
    buffer[5] = 0x00;
    
    return rf4463_set_cmd(RF4463_CMD_GPIO_PIN_CFG, buffer, 6);
}

bool rf4463_set_tx_interrupt()
{
    uint8_t buffer[4];      // Enable PACKET_SENT interruption
    
    buffer[0] = 0x01;
    buffer[1] = 0x20;
    buffer[2] = 0x00;
    
    return rf4463_set_properties(RF4463_PROPERTY_INT_CTL_ENABLE, buffer, 3);
}

bool rf4463_set_rx_interrupt()
{
    uint8_t buffer[4];      // Enable PACKET_RX interrution
    
    buffer[0] = 0x03;
    buffer[1] = 0x18;
    buffer[2] = 0x00;
    
    return rf4463_set_properties(RF4463_PROPERTY_INT_CTL_ENABLE, buffer, 3);
}

void rf4463_write_tx_fifo(uint8_t *data, uint8_t len)
{
    rf4463_set_properties(RF4463_PROPERTY_PKT_FIELD_2_LENGTH_7_0, &len, 1);
    uint8_t buffer[128];
    memcpy(buffer, data, len);
    
    rf4463_set_cmd(RF4463_CMD_TX_FIFO_WRITE, buffer, len);
}

uint8_t rf4463_read_rx_fifo(uint8_t *data)
{
    if (!rf4463_check_cts())
    {
        return 0;
    }
    
    uint8_t read_len;
    GPIO_setOutputLowOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    rf4463_spi_transfer(RF4463_CMD_RX_FIFO_READ);
    rf4463_spi_read(&read_len, 1);
    rf4463_spi_read(data, read_len);
    GPIO_setOutputHighOnPin(RF4463_NSEL_PORT, RF4463_NSEL_PIN);
    
    return read_len;
}

void rf4463_fifo_reset()
{
    uint8_t data = 0x03;
    
    rf4463_set_cmd(RF4463_CMD_FIFO_INFO, &data, 1);
}

void rf4463_enter_tx_mode()
{
    uint8_t buffer[5];
    
    buffer[0] = RF4463_FREQ_CHANNEL;
    buffer[1] = 0x30;                   // TXCOMPLETE_STATE = Ready State; RETRANSMIT = 0 = No re-transmition; START = 0 = Start TX immediately
    buffer[2] = 0x00;                   // TX packet length MSB (If equal zero, default length)
    buffer[3] = 0x00;                   // TX packet length LSB (If equal zero, default length)
    
    rf4463_set_cmd(RF4463_CMD_START_TX, buffer, 4);
}

void rf4463_enter_rx_mode()
{
    uint8_t buffer[8];
    
    buffer[0] = RF4463_FREQ_CHANNEL;
    buffer[1] = 0x00;
    buffer[2] = 0x00;
    buffer[3] = 0x00;
    buffer[4] = 0x00;
    buffer[5] = 0x08;
    buffer[6] = 0x08;
    
    rf4463_set_cmd(RF4463_CMD_START_RX, buffer, 7);
}

bool rf4463_enter_standby_mode()
{
    uint8_t data = 0x01;
    
    return rf4463_set_cmd(RF4463_CMD_CHANGE_STATE, &data, 1);
}
